kustomize/overlays/beta/tffk-no/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: fint-core-consumer-utdanning-vurdering
spec:
  entryPoints:
    - web
  routes:
    - match: "Host(`beta.felleskomponent.no`) && (PathPrefix( `/utdanning/vurdering/fravar` ) || PathPrefix( `/utdanning/vurdering/elevfravar` ) || PathPrefix( `/utdanning/vurdering/fravarsoversikt` ) || PathPrefix( `/utdanning/vurdering/admin/status` ) || PathPrefix( `/utdanning/vurdering/anmerkninger` ) || PathPrefix( `/utdanning/vurdering/eksamensgruppe` ) || PathPrefix( `/utdanning/vurdering/eksamensgruppemedlemskap` ) || PathPrefix( `/utdanning/vurdering/halvarsfagvurdering` ) || PathPrefix [...]

      kind: Rule
      services:
        - name: fint-core-consumer-utdanning-vurdering
          port: 8080
